# python-overview-project

./: .gitignore  MANUAL.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
docs/: CALENDAR.md  NOTES.md  Overview.sketch  WEATHER.md  _config.yml  calendar_tab.md  index.md  notes_tab.md  weather_tab.md
overview/: __main__.py  app.py
overview/controllers/: app.py  calendar.py  notes.py  weather.py
overview/locale/en_US/LC_MESSAGES/: messages.po
overview/models/: app.py  calendar.py  notes.py  test_weather.py  weather.py
overview/utils/: formatters.py  test_formatters.py
overview/views/: calendar.py  notes.py
overview/views/app/: app.py  app_bar.py  app_bar_button.py
overview/views/shared/: loading.py  scrollable.py  view.py
overview/views/weather/: current_weather.py  today_weather.py  weather.py
sphinx/: conf.py  index.rst
sphinx/src/: modules.rst  overview.controllers.rst  overview.models.rst  overview.rst  overview.utils.rst  overview.views.app.rst  overview.views.rst  overview.views.shared.rst  overview.views.weather.rst  src.controllers.rst  src.models.rst  src.rst  src.utils.rst  src.views.app.rst  src.views.rst  src.views.shared.rst  src.views.weather.rst
src/: __main__.py  conftest.py
src/controllers/: app.py  calendar.py  notes.py  weather.py
src/controllers/app/: app.py
src/models/: app.py  calendar.py  geolocation.py  notes.py  test_weather.py  weather.py
src/models/app/: app.py  widget_kind.py
src/models/weather/: daily_forecast_model.py  hourly_forecast_model.py  weather_forecast.py  weather_forecast_data.py  weather_kind.py
src/utils/: configuration.py  dates.py  execution.py  formatters.py  test_formatters.py  utils.py
src/views/: calendar.py  notes.py
src/views/app/: app.py  app_bar.py  app_bar_button.py
src/views/calendar/: calendar.py
src/views/home/: home.py
src/views/notes/: notes.py
src/views/shared/: flexible.py  loading.py  scrollable.py  view.py
src/views/weather/: current_weather.py  today_weather.py  weather.py
(+4 files in other folders)
