[tool.poetry]
name = "overview"
version = "0.1.0"
description = "Overview app project"
authors = ["Max Zhuravsky <paperlark@icloud.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
