[tool.poetry]
name = "overview"
version = "0.1.0"
description = "Overview Desktop Application"
readme = "README.md"
homepage = "https://paper-lark.github.io/python-overview-project/"
repository = "https://github.com/paper-lark/python-overview-project"
keywords = ["tkinter", "application"]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Natural Language :: Russian",
    "Topic :: Office/Business"
]
authors = ["Max Zhuravsky <paperlark@icloud.com>", "Alexander Dimitrienko <aleksander.dimit@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.scripts]
overview = 'overview.app:run'

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"
Babel = "^2.9.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.9.0"
pydocstyle = "^6.0.0"
isort = "^5.8.0"
pytest = "^6.2.4"
pytest-mock = "^3.6.1"
pytz = "^2021.1"
Sphinx = "^4.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
